CSS layout adjustments, added .csv to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Not required (or desired) for deployment
 *.pyc
+*.csv
 venv
 __pycache__
 local_settings.py
@@ -8,4 +9,3 @@ db.sqlite3
 migrations/*
 !migrations/__init__.py
 uploads/*
-kitactivity.csv
